compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bit_arrays__sized.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:4>>\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) toBitArray sizedInt;
  
  go = toBitArray [ (sizedInt 256 4) ];
in {}
