compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bit_arrays__two.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256, 4>>\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) toBitArray;
  
  go = toBitArray [ 256 4 ];
in {}
