compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__bit_arrays__variable_sized.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go(x, y) {\n  <<x:size(y)>>\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) toBitArray sizedInt;
  
  go = x: y: toBitArray [ (sizedInt x y) ];
in {}
